--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -97,7 +97,8 @@
                 "edit": "Modifier",
                 "uninstall": "Désinstaller",
                 "create-shortcut": "Créer un raccourci",
-                "shared-folders": "Dossiers partagés"
+                "shared-folders": "Dossiers partagés",
+                "restore-oculus-folder": "Restaurer le dossier"
             }
         },
         "available-versions": {
@@ -112,7 +113,12 @@
             "steam-and-oculus": {
                 "title": "Steam & Oculus",
                 "description": "Te déconnecter te permettra de changer de compte au prochain téléchargement de Beat Saber.",
-                "logout": "Déconnexion"
+                "logout": "Déconnexion",
+                "download-platform": {
+                    "title": "Plateforme par défaut",
+                    "desc": "Choisi la plateforme par défaut qui sera utilisée pour télécharger les versions de Beat Saber.",
+                    "always-ask": "Toujours demander"
+                }
             },
             "appearance": {
                 "title": "Apparence",
@@ -366,7 +372,8 @@
                     "OCULUS_NOT_RUNNING": "Oculus n'est pas lancé",
                     "BS_ALREADY_RUNNING": "Beat Saber est déjà lancé",
                     "EXE_NOT_FINDED": "Fichiers manquants",
-                    "EXIT": "Arrêt brutal"
+                    "EXIT": "Arrêt brutal",
+                    "OCULUS_LIB_NOT_FOUND": "Librairie Oculus introuvable"
                 },
                 "msg": {
                     "UNKNOWN_ERROR": "Une erreur inconnue s'est produite.",
@@ -374,7 +381,8 @@
                     "OCULUS_NOT_RUNNING": "Oculus doit être en cours d'exécution pour lancer Beat Saber.",
                     "BS_ALREADY_RUNNING": "Ferme Beat Saber avant de le lancer à nouveau.",
                     "EXE_NOT_FINDED": "Quelques fichiers semblent manquants. Essaye de vérifier les fichiers.",
-                    "EXIT": "Beat Saber s'est arrêté brusquement, essaye de vérifier les fichiers."
+                    "EXIT": "Beat Saber s'est arrêté brusquement, essaye de vérifier les fichiers.",
+                    "OCULUS_LIB_NOT_FOUND": "Vérifie que l'application Oculus est correctement installée, et que les librairies sont bien définies dans Oculus."
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Lancer Steam"
@@ -482,6 +490,11 @@
         "misc": {
             "remember-my-choice": "Se souvenir de mon choix"
         },
+        "choose-store": {
+            "title": "Quelle plateforme ?",
+            "body": "Sélectionnez la plateforme depuis laquelle vous souhaitez télécharger Beat Saber.",
+            "set-in-settings": "Définir la platforme par défaut dans les paramètres"
+        },
         "guard": {
             "title": "Steam Guard",
             "inputs": {
@@ -536,6 +549,8 @@
         "bs-import-version": {
             "title": "Importer une version",
             "description": "Importe une version de Beat Saber pour profiter des fonctionnalités de BSManager. L'importation copiera le dossier d'installation de Beat Saber sélectionné dans le dossier de versions de BSManager.",
+            "oculus-version": "Version Oculus",
+            "oculus-version-tooltip": "Cocher si c'est une version Oculus",
             "buttons": {
                 "submit": "Importer une version"
             }
@@ -656,6 +671,25 @@
             "launch-options": "Options de lancement",
             "advanced-launch": "Lancement avancé",
             "valid-btn": "Créer le raccourci"
+        },
+        "connect-to-meta":{
+            "title": "Connexion à Meta",
+            "body":{
+                "token-needed": "Votre token de connexion à Meta est nécessaire pour télécharger Beat Saber.",
+                "need-cookie-enabled": "En vous connectant à Meta, une fenêtre de connexion s'ouvrira et vous pourrez alors débuter le processus de connexion. Veuillez à bien accepter les cookies sinon quoi, il se pourrait que l'on n'arrive pas à récupérer votre token pour démarrer le téléchargement."
+            },
+            "stay":"Se souvenir de moi",
+            "connect-to-meta": "Se connecter à Meta"
+        },
+        "original-version-backup-oculus": {
+            "title": "Attention",
+            "body": {
+                "need-backup": "Pour lancer cette version, le dossier d'installation de Beat Saber se trouvant dans votre librairie Oculus va être renommé.",
+                "can-restore-later": "Au besoin, vous pourrez le restaurer depuis BSManager en vous rendant dans les options de la version originale Oculus et en cliquant sur \"Restaurer le dossier\"",
+                "tips-launch-oculus": "Astuce : Vous pourrez lancer cette version directement depuis Oculus, tant que la version originale n'est pas restaurée."
+            },
+            "not-remind-me": "Ne plus me rappeler",
+            "understood": "J'ai compris"
         }
     },
     "maps": {
