--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -98,7 +98,8 @@
                 "edit": "Редактировать",
                 "uninstall": "Удалить",
                 "create-shortcut": "Создать ярлык",
-                "shared-folders": "Общие папки"
+                "shared-folders": "Общие папки",
+                "restore-oculus-folder": "Восстановить папку"
             }
         },
         "available-versions": {
@@ -113,7 +114,12 @@
             "steam-and-oculus": {
                 "title": "Steam & Oculus",
                 "description": "Выход позволит вам сменить учетную запись при следующей загрузке Beat Saber.",
-                "logout": "Выйти"
+                "logout": "Выйти",
+                "download-platform": {
+                    "title": "Основная платформа",
+                    "desc": "Выберите основную платформу, которая будет использоваться для скачивания версий Beat Saber.",
+                    "always-ask": "Всегда спрашивать"
+                }
             },
             "appearance": {
                 "title": "Персонализация",
@@ -370,7 +376,8 @@
                     "OCULUS_NOT_RUNNING": "Oculus не запущен",
                     "BS_ALREADY_RUNNING": "Beat Saber уде запущен",
                     "EXE_NOT_FINDED": "Отсутствуют файлы",
-                    "EXIT": "Вылет"
+                    "EXIT": "Вылет",
+                    "OCULUS_LIB_NOT_FOUND": "Библиотека Oculus не найдена"
                 },
                 "msg": {
                     "UNKNOWN_ERROR": "Возникла неизвестная ошибка.",
@@ -378,7 +385,8 @@
                     "OCULUS_NOT_RUNNING": "Oculus должен быть запущен, чтобы запустить Beat Saber.",
                     "BS_ALREADY_RUNNING": "Закройте Beat Saber, чтобы запустить его.",
                     "EXE_NOT_FINDED": "Некоторые файлы отсутствуют, пробуем их проверить.",
-                    "EXIT": "Beat Saber вылетел, пытаемся проверить файлы."
+                    "EXIT": "Beat Saber вылетел, пытаемся проверить файлы.",
+                    "OCULUS_LIB_NOT_FOUND": "Проверьте, правильно ли установлено приложение Oculus, и правильно ли определены библиотеки в Oculus."
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Запустить Steam"
@@ -486,6 +494,11 @@
         "misc": {
             "remember-my-choice": "Запомнить выбор"
         },
+        "choose-store": {
+            "title": "Какая платформа?",
+            "body": "Выберите платформу, с которой вы хотите скачать Beat Saber.",
+            "set-in-settings": "Установить платформу по умолчанию в настройках"
+        },
         "guard": {
             "title": "Steam Guard",
             "inputs": {
@@ -540,6 +553,8 @@
         "bs-import-version": {
             "title": "Импорт версии",
             "description": "Импортировать версию Beat Saber, чтобы использоваться BSManager. Beat Saber будет скопирован в папку версий BSManager.",
+            "oculus-version": "Версия Oculus",
+            "oculus-version-tooltip": "Отметьте, если это версия для Oculus",
             "buttons": {
                 "submit": "Импортировать версию"
             }
@@ -660,6 +675,25 @@
             "launch-options": "Параметры запуска",
             "advanced-launch": "Расширенный запуск",
             "valid-btn": "Создать ярлык"
+        },
+        "connect-to-meta":{
+            "title": "Подключение к Meta",
+            "body":{
+                "token-needed": "Для скачивания Beat Saber необходим ваш токен подключения к Meta.",
+                "need-cookie-enabled": "При входе в Meta откроется окно входа, и вы сможете начать процесс входа. Пожалуйста, убедитесь, что вы приняли cookies, иначе мы можем не суметь получить ваш токен для начала загрузки."
+            },
+            "stay":"Запомнить меня",
+            "connect-to-meta": "Подключиться к Meta"
+        },
+        "original-version-backup-oculus": {
+            "title": "Внимание",
+            "body": {
+                "need-backup": "Для запуска этой версии папка установки Beat Saber в вашей библиотеке Oculus будет переименована.",
+                "can-restore-later": "При необходимости вы можете восстановить её через BSManager, перейдя в опции оригинальной версии Oculus и нажав на 'Восстановить папку'",
+                "tips-launch-oculus": "Совет: Вы можете запустить эту версию напрямую через Oculus, пока оригинальная версия не восстановлена."
+            },
+            "not-remind-me": "Больше не напоминать",
+            "understood": "Понял"
         }
     },
     "maps": {
