--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -106,7 +106,7 @@
             "title": "Выберите версию",
             "steam-release": "Список изменений",
             "dropdown": {
-                "refresh": "Обновить список",
+                "refresh": "Обновить версии",
                 "import-version": "Импорт версии"
             }
         },
