--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -680,7 +680,9 @@
             "title": "Подключение к Meta",
             "body":{
                 "token-needed": "Для скачивания Beat Saber необходим ваш токен подключения к Meta.",
-                "need-cookie-enabled": "При входе в Meta откроется окно входа, и вы сможете начать процесс входа. Пожалуйста, убедитесь, что вы приняли cookies, иначе мы можем не суметь получить ваш токен для начала загрузки."
+                "need-cookie-enabled": "При входе в Meta откроется окно входа, и вы сможете начать процесс входа. Пожалуйста, убедитесь, что вы приняли cookies, иначе мы можем не суметь получить ваш токен для начала загрузки.",
+                "enter-token-manually": "Ввести мой токен входа вручную",
+                "enter-token-manually-tooltip": "Это позволит вам ввести ваш токен входа без прохождения через вход в Meta."
             },
             "stay":"Запомнить меня",
             "connect-to-meta": "Подключиться к Meta"
@@ -694,6 +696,16 @@
             },
             "not-remind-me": "Больше не напоминать",
             "understood": "Понял"
+        },
+        "enter-meta-token": {
+            "title": "Мета Токен",
+            "body": {
+                "need-token": "Для загрузки Beat Saber требуется ваш токен входа в Meta.",
+                "how-obtain-token": "Как получить мой Мета Токен?",
+                "input-label": "Мета Токен",
+                "token-is-invalid": "Токен недействителен."
+            },
+            "valid-btn": "Подтвердить"
         }
     },
     "maps": {
