--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -680,7 +680,9 @@
             "title": "Connect to Meta",
             "body":{
                 "token-needed": "Your Meta connection token is required to download Beat Saber.",
-                "need-cookie-enabled": "By logging into Meta, a login window will open and you can then start the login process. Please ensure to accept cookies, otherwise, we might not be able to retrieve your token to start the download."
+                "need-cookie-enabled": "By logging into Meta, a login window will open and you can then start the login process. Please ensure to accept cookies, otherwise, we might not be able to retrieve your token to start the download.",
+                "enter-token-manually": "Enter my login token manually",
+                "enter-token-manually-tooltip": "This will allow you to enter your login token without going through Meta login."
             },
             "stay":"Remember me",
             "connect-to-meta": "Connect to Meta"
@@ -694,6 +696,16 @@
             },
             "not-remind-me": "Do not remind me",
             "understood": "Understood"
+        },
+        "enter-meta-token": {
+            "title": "Meta Token",
+            "body": {
+                "need-token": "To download Beat Saber, your Meta login token is required.",
+                "how-obtain-token": "How do I obtain my Meta Token?",
+                "input-label": "Meta Token",
+                "token-is-invalid": "The Token is invalid."
+            },
+            "valid-btn": "Validate"
         }
     },
     "maps": {
