[feature] Added "recommended" banner on the best modable version

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -108,7 +108,9 @@
             "dropdown": {
                 "refresh": "Aktualisieren Sie die Versionen",
                 "import-version": "Importiere eine Version"
-            }
+            },
+            "recommended": "empfohlen",
+            "recommended-tooltip": "Am modbarsten Version"
         },
         "settings": {
             "steam-and-oculus": {
