--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -156,13 +156,15 @@
                     "es-ES": "Español",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
+                    "zh-CN": "简体中文",
                     "translated": {
                         "en-EN": "Englisch, Vereinigtes Königreich",
                         "en-US": "Englisch, USA",
                         "fr-FR": "Französisch",
                         "es-ES": "Spanisch",
                         "de-DE": "Deutsch",
-                        "ru-RU": "Russisch"
+                        "ru-RU": "Russisch",
+                        "zh-CN": "Vereinfachtes Chinesisch"
                     }
                 }
             },
