--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -156,13 +156,15 @@
                     "es-ES": "Español",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
+                    "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "Английский, Великобритания",
                         "en-US": "Английский, США",
                         "fr-FR": "Французский",
                         "es-ES": "Испанский",
                         "de-DE": "Немецкий",
-                        "ru-RU": "Русский"
+                        "ru-RU": "Русский",
+                        "ja-JP": "Японский"
                     }
                 }
             },
